# Django6-SurrealDB-Backend

./: .gitignore  LICENSE  README.md  pyproject.toml
src/SRBackend/: README.md  __init__.py  tests.py
src/SRBackend/base/: __init__.py  base.py  metrics.py  middleware.py  operations.py
src/SRBackend/management/: __init__.py
src/SRBackend/management/commands/: __init__.py  cleanup_surreal_pk_map.py  rebuild_surreal_pk_map.py
